--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- Ganti Audio di sini --><audio id="linkmp3">https://feeldreams.github.io/menimeni.mp3</audio>
   
 <div id="bodyblur">
-  <!-- Wallpaper --><img src="https://feeldreams.github.io/wpjalanan.jpg" id="wallpaper" width="100%" height="100%"/>
+  <!-- Wallpaper --><img src="https://telegra.ph/file/c2fc75145d982d2bb5e63.jpg" id="wallpaper" width="100%" height="100%"/>
   <div id="beneranblur"></div>
 </div>
 
